# atv-couch-wake

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  config.example.toml
src/atv_couch_wake/: __init__.py  cli.py  config.py  controller_wake.py  diagnostics.py  discovery.py  lifecycle.py  pairing.py  paths.py  platform_info.py  remote.py  setup_wizard.py  systemd_integration.py  test_lifecycle.py  test_systemd.py
src/atv_couch_wake.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_adb_control.py  test_config.py  test_controller_wake.py  test_diagnostics.py  test_discovery.py  test_lifecycle.py  test_remote.py  test_setup_wizard.py  test_systemd.py
